# vi_renderer

./: .gitignore  Cargo.toml  out.ppm  verts.txt
models/: cornell_box_VI.mtl
src/: main.rs  vector.rs
src/camera/: mod.rs  perspective.rs
src/images/: image_ppm.rs  image_rgb.rs  mod.rs
src/lights/: ambient_light.rs  area_light.rs  mod.rs
src/primitives/: material_data.rs  mesh.rs  mod.rs  triangle.rs
src/rays/: intersection.rs  mod.rs  ray.rs
src/render/: mod.rs
src/scene/: mod.rs
src/shaders/: ambient_shader.rs  distributed_shader.rs  light_shader.rs  mod.rs  path_tracer_shader.rs  whitted_shader.rs
src/swapchain/: mod.rs
src/utils/: aabb.rs  mod.rs  rgb.rs  vector.rs
