[package]
name = "vi_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "4.0.1"
rand = "0.8.4"
rayon = "1.10.0"
minifb = "0.26.0"

[profile.release-debug]
inherits = "release"
debug = true
